fixing alignment, attempt 1

--- a/css/hr.css
+++ b/css/hr.css
@@ -1,4 +1,4 @@
-hr {
+hr#homepage-hr {
     border: none;
     width: 37rem;
     border-top: 5px solid whitesmoke;
@@ -6,4 +6,6 @@ hr {
     overflow: visible;
     text-align: center;
     height: 5px;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
 }
