--- a/css/images.css
+++ b/css/images.css
@@ -1,3 +1,3 @@
-#aegis-wordmark{
+img#aegis-wordmark{
     align-self: center;
 }
